Closed Bug 1923289 Opened 1 year ago Closed 1 year ago

[X11, no compositing] Menu popups have double border on left or bottom side

Categories

(Core :: Widget: Gtk, defect)

Firefox 131
Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox131 --- wontfix
firefox132 --- fixed
firefox133 --- fixed

People

(Reporter: aros, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(5 files)

Attached image right click menu 130

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:131.0) Gecko/20100101 Firefox/131.0

Steps to reproduce:

Right click menus in Linux under X11 with no compositing look different in 131 than they were in 130. Check the screenshots.

Attached image right click menu 131
Attached image triple menu 130
Attached image triple menu 131
OS: Unspecified → Linux
Keywords: regression

Menus are not rounded and there's a weird black bar on the right side? Shadow? Doesn't look like shadow.

It's on the right or at the bottom.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Component: Widget: Gtk → Theme
Flags: needinfo?(emilio)
Product: Core → Firefox
Regressed by: 1913104
Summary: [X11, no compositing] Right click menus do not look the same → [X11, no compositing] Menu popups have double border on left or bottom side
Flags: needinfo?(emilio)

This makes us choose the right rounding mode in nsView::CalcWidgetBounds
in order to prevent seams.

Remove composited screen special case which is no longer relevant now
that the X11 shape mask code is gone.

Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Set release status flags based on info from the regressing bug 1913104

(In reply to Emilio Cobos Álvarez (:emilio) from comment #7)

Created attachment 9429580 [details]
Bug 1923289 - Don't report popups as transparent in uncomposited screens. r=stransky

This makes us choose the right rounding mode in nsView::CalcWidgetBounds
in order to prevent seams.

Remove composited screen special case which is no longer relevant now
that the X11 shape mask code is gone.

Are you saying rounded corners are also forever gone for non-composited environments?

Yes, I don't think we want to maintain the X11 shape mask code just for this kind of environment.

Component: Theme → Widget: Gtk
Product: Firefox → Core
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ff97d79c8c17 Don't report popups as transparent in uncomposited screens. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox132 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Comment on attachment 9429580 [details]
Bug 1923289 - Don't report popups as transparent in uncomposited screens. r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0 (XFCE with compositing disabled)
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Only affects non-compositing window managers.
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9429580 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9429580 [details]
Bug 1923289 - Don't report popups as transparent in uncomposited screens. r=stransky

Approved for 132.0b6.

Attachment #9429580 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Unfortunately, I was unable to reproduce the issue on Firefox 131.0, using Linux Fedora 40 (VM), X11, with compositing disabled, for the app menu / context menus. However, I was able to see the black border at the bottom of the tab hover preview.
I can confirm that the black border is no longer displayed at the bottom of the tab hover preview using Firefox 132.0b6 and Firefox 133.0a1 (2024-10-13), on Linux Fedora 40 (VM), X11, with compositing disabled. Also, the corners of the menus are no longer rounded.
@aros, could you please confirm that the issue is no longer reproducing on your end as well, using Firefox 132.0b6 / latest Nightly build? Thanks in advance!

Flags: needinfo?(aros)
Flags: needinfo?(aros)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: