Bug 1923289 - Don't report popups as transparent in uncomposited screens. r=stransky

This makes us choose the right rounding mode in nsView::CalcWidgetBounds
in order to prevent seams.

Remove composited screen special case which is no longer relevant now
that the X11 shape mask code is gone.

Differential Revision: https://phabricator.services.mozilla.com/D224918